# llm_reasoning

./: .gitignore  README.md  debug.html  environment.yml  pyproject.toml  requirements.txt
data/blocksworld/: split_v1.json  split_v2.json
data/blocksworld/prompts/: pool_prompt_v1.json  pool_prompt_v2_step_10.json  pool_prompt_v2_step_12.json  pool_prompt_v2_step_4.json  pool_prompt_v2_step_6.json  pool_prompt_v2_step_8.json
data/blocksworld/split_v1/: split_v1_step_10_data.json  split_v1_step_12_data.json  split_v1_step_2_data.json  split_v1_step_4_data.json  split_v1_step_6_data.json  split_v1_step_8_data.json
data/blocksworld/split_v2/: split_v2_step_10_data.json  split_v2_step_12_data.json  split_v2_step_2_data.json  split_v2_step_4_data.json  split_v2_step_6_data.json  split_v2_step_8_data.json
data/math/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/math/train/: cache-94ff69166b2c4d1b.arrow  state.json
data/prontoqa/: test.json  train.json
src/llm_reasoning/: evaluate.py  get_pretrain_data.py  prepare_bc_data.py  train.py  visualize.py
src/llm_reasoning/judge/: base.py  likelihood_judge.py  llm_judge.py  post_processor.py
src/llm_reasoning/llm/: __init__.py  api.py  base.py  exllama.py  huggingface.py  qvllm.py  vllm.py  vllm_chat.py  vllm_inference.py
src/llm_reasoning/policy/: __init__.py  ada_pgts.py  base.py  bfs.py  cot.py  dfs.py  iter_pgts.py  mcts.py  pgts.py  step_cot.py  utils.py
src/llm_reasoning/task/: __init__.py  aqua.py  base.py  blocksworld.py  bw.py  gpqa.py  gsm8k.py  math.py  metamath.py  metareason.py  (+2 more)
(+6 files in other folders)
