[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_reasoning"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonlines",
    "jsonargparse",
    "omegaconf",
    "retry",
    "boto3",
    "exllamav2",
    "litellm==1.52.14",
    "vllm==0.6.4",
    "transformers==4.46.3",
    "flash_attn",
    "torch_geometric",
    "scipy",
    "seaborn",
    "pyvis",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp310-cp310-linux_x86_64.whl",
    "tarski==0.8.2",
    "pddl==0.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]